--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -8,10 +8,13 @@
   "dependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-react": "^7.14.5",
+    "@reduxjs/toolkit": "^1.5.1",
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "redux-saga": "^1.1.3",
     "serve": "^12.0.0",
     "webpack": "5.40.0",
     "webpack-cli": "^4.7.2"
