--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -2,12 +2,17 @@
   "name": "shared",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
+    "connected-react-router": "^6.9.1",
+    "history": "^4.10.1",
     "hoist-non-react-statics": "^3.3.2",
     "invariant": "^2.2.4",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0",
     "redux-saga": "^1.1.3"
   }
 }
