--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -11,7 +11,7 @@
     "history": "^4.10.1",
     "hoist-non-react-statics": "^3.3.2",
     "invariant": "^2.2.4",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
