--- a/packages/pageTwo/package.json
+++ b/packages/pageTwo/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "footer",
+  "name": "pagetwo",
   "scripts": {
     "start": "webpack --watch",
     "build": "webpack --mode production",
-    "serve": "serve dist -p 3001"
+    "serve": "serve dist -p 3006"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
