--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,12 +1,14 @@
 {
   "name": "shared",
+  "version": "1.0.0",
+  "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
     "connected-react-router": "^6.9.1",
     "history": "^4.10.1",
     "hoist-non-react-statics": "^3.3.2",
     "invariant": "^2.2.4",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
